--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
-board_build.filesystem = littlefs
+board_build.filesystem = spiffs
 monitor_speed = 115200
 lib_deps = 
 	nanopb/Nanopb@^0.4.91
